--- a/ResumeReservaAdmin.html
+++ b/ResumeReservaAdmin.html
@@ -138,7 +138,7 @@
                     <div class="d-flex p-2 justify-content-between">
                         <div class="col-2">
                             <span> Teléfono: </span>
-                        </div>gi
+                        </div>
                         <div class="col-8 col-md-6 col-xl-4">
                             <input class="form-control" type="text" v-model="reserva.telefono"disabled>
                         </div>
