--- a/BarcosReservaUsuario.html
+++ b/BarcosReservaUsuario.html
@@ -13,7 +13,7 @@
                                             <div>
                                                 <button class="btn btn-direction position-absolute top-25"><i class="fas fa-chevron-left"></i></button>
                                                 <button class="btn btn-direction position-absolute top-25 end-0"><i class="fas fa-chevron-right"></i></button>
-                                                <img :src="i.imagen1" class="card-img-top size-img-grid" alt="...">
+                                                <img :src="i.principal" class="card-img-top size-img-grid" alt="...">
                                             </div>
     
                                             <div class="card-body">
@@ -22,8 +22,7 @@
                                                 <div class="d-flex justify-content-between align-items-center">
                                                     <div class="d-flex align-items-center p-2">
                                                         <button class="btn btn-transparent icon-gray"><i class="fas fa-user"></i></button>
-                                                        <span class="position-relative top-20 mx-2 color-gray" style="font-size: .8rem;">Sin
-                                                            titulación</span>
+                                                        <span class="position-relative top-20 mx-2 color-gray" style="font-size: .8rem;" x-text="i.requiere"></span>
                                                     </div>
                                                     <div>
                                                         <button class="btn btn-transparent icon-gray"><i class="fas fa-users fa-xs"></i><span class="mx-2">6</span> </button>
