--- a/ReservaUsuarioFecha.html
+++ b/ReservaUsuarioFecha.html
@@ -11,7 +11,8 @@
                         <div class="row">
                             <div class="col-12 col-md-4"></div>
                             <div class="col-12 col-md-4">
-                                <input type="date" class="form-control" @change="zona_horaria()">
+                                <input data-provide="datepicker" type="date" id="datepicker" @change="zona_horaria()">
+                                <!-- <input type="date" class="form-control" id="datereservafecha" @change="zona_horaria()"> -->
                             </div>
                             <div class="col-12 col-md-4"></div>
                         </div>
