--- a/ReservaUsuarioFecha.html
+++ b/ReservaUsuarioFecha.html
@@ -11,14 +11,10 @@
                         <div class="row">
                             <div class="col-12 col-md-4"></div>
                             <div class="col-12 col-md-4">
-                                <!-- <div class="form-group col-md-4 mt-5"> -->
                                 <div>
                                     <label for="fechaInicio">Fecha</label>
                                     <input type="text" id="fechaInicio">
                                 </div>
-                                <!-- </div> -->
-                                <!-- <input data-provide="datepicker" type="date" id="datepicker" @change="zona_horaria()"> -->
-                                <!-- <input type="date" class="form-control" id="datereservafecha" @change="zona_horaria()"> -->
                             </div>
                             <div class="col-12 col-md-4"></div>
                         </div>
@@ -26,13 +22,13 @@
                     <template x-if="true">
                         <div class="buttons-defect">
                             <div class="d-flex justify-content-center w-100">
-                                <div class="container-btn zone_hour d-none" id="por_la_maniana">
+                                <div class="container-btn zone_hour d-none" id="por_la_maniana" @click="seleccionar_zona_horaria('maniana')">
                                     <strong class="color-gray-dark"> Por la mañana </strong>
                                 </div>
-                                <div class="container-btn zone_hour d-none" id="por_la_tarde">
+                                <div class="container-btn zone_hour d-none" id="por_la_tarde" @click="seleccionar_zona_horaria('tarde')">
                                     <strong class="color-gray-dark"> Por la tarde </strong>
                                 </div>
-                                <div class="container-btn zone_hour d-none" id="por_la_dia">
+                                <div class="container-btn zone_hour d-none" id="por_la_dia" @click="seleccionar_zona_horaria('todo_dia')">
                                     <strong class="color-gray-dark"> Todo el día </strong>
                                 </div>
                             </div>
@@ -81,7 +77,6 @@
             validar_zona_horaria() {
                 let url = this.base_url + '/BoatsLaravel/public/reserva/validar_zona_horaria'
                 axios.post(url, {id: this.form_reserva.id_vote, fecha: this.fecha_zona}).then(res => {
-                    console.log('res.data ==> ', res.data);
                 })
             },
             datepicker(disabled_dates) {
@@ -107,11 +102,10 @@
                             var string = jQuery.datepicker.formatDate('yy-mm-dd', date);
                             return [disabled_dates.indexOf(string) == -1]
                         },
-                    }).change(function() {
+                    }).change(() => {
+                        this.form_reserva.fecha_inicio_viaje = $('#fechaInicio').val()
                         params.fecha = $('#fechaInicio').val()
-                        console.log('params ==> ', params);
                         let url = base_url + '/BoatsLaravel/public/reserva/validar_zona_horaria'
-                        console.log('url ==> ', url);
                         axios.post(url, params ).then(res => {
                             response = res.data
                             if(res.data.maniana == 1) $('#por_la_maniana').removeClass('d-none')
@@ -122,10 +116,13 @@
                             
                             if(res.data.todo_dia == 1) $('#por_la_dia').removeClass('d-none')
                             else $('#por_la_dia').addClass('d-none')
-                            console.log('response ==> ', response);
                         })
                     })
             },
+            seleccionar_zona_horaria(zona_horaria) {
+                this.form_reserva.zona_horaria = zona_horaria
+                this.pantalla = 'ReservaUsuarioHoras'
+            }
         }
     }
 </script>
